# Journeyman-Engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  PHASE_1_TRANSFORM_HIERARCHY_BREAKDOWN.md  PHASE_2_SCENE_STRUCTURE_BREAKDOWN.md  PHASE_3_SCENE_MANAGER_FEATURES_BREAKDOWN.md  PHASE_4_SCENE_TRANSITIONS_BREAKDOWN.md  PHASE_5_SERIALIZATION_SAVE_SYSTEM_BREAKDOWN.md  PHASE_6_INTEGRATION_POLISH_BREAKDOWN.md  README.md  SCENE_GRAPH_IMPLEMENTATION_STEPS.md  SceneGraphPlan.md  SceneGraphWorkBreakdown.md
engine/: CMakeLists.txt  main.cpp
engine/audio/: AudioComponent.hpp  AudioEmitterComponent.hpp  AudioHandle.hpp  AudioHostFunctions.cpp  AudioHostFunctions.hpp  AudioManager.cpp  AudioManager.hpp  AudioModule.cpp  AudioModule.hpp  AudioSystem.hpp  CMakeLists.txt  SoundBuffer.cpp  SoundBuffer.hpp  SoundInstance.hpp  Voice.cpp  Voice.hpp  VoiceCommand.hpp  VoiceManager.cpp  VoiceManager.hpp  VoicePool.cpp  VoicePool.hpp  miniaudio_impl.cpp
engine/core/: CMakeLists.txt
engine/core/app/: Application.cpp  Application.hpp  ApplicationEvents.hpp  ApplicationHostFunctions.cpp  ApplicationHostFunctions.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  EngineModule.hpp  GameManifest.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  ModuleTags.hpp  ModuleTraits.hpp  Registration.hpp  Scene.hpp  SceneHostFunctions.cpp  SceneHostFunctions.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneManager.cpp  SceneManager.hpp
engine/core/assets/: Archive.cpp  Archive.hpp  AssetConverter.hpp  AssetHandle.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetRegistry.hpp  CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  Filesystem.cpp  Filesystem.hpp  RawAsset.hpp
engine/core/async/: CMakeLists.txt  Job.hpp  LockFreeQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
engine/core/components/: CMakeLists.txt  Transform2D.hpp
engine/core/ecs/: CMakeLists.txt  ECSRegistry.hpp  View.hpp  World.cpp  World.hpp
engine/core/ecs/archetype/: Archetype.cpp  Archetype.hpp  ArchetypeSet.cpp  ArchetypeSet.hpp  ArchetypeSignature.hpp
engine/core/ecs/component/: Component.hpp  ComponentConcepts.hpp  ComponentId.hpp  ComponentInfo.hpp  ComponentManager.hpp  ComponentRegistry.hpp  ComponentStorage.hpp
engine/core/ecs/components/: TransformComponent.hpp
engine/core/ecs/entity/: EntityBuilder.cpp  EntityBuilder.hpp  EntityId.hpp  EntityManager.hpp  EntityRef.cpp  EntityRef.hpp  TagSymbol.hpp
engine/core/ecs/prefab/: Prefab.hpp  PrefabLoader.cpp  PrefabLoader.hpp
engine/core/ecs/system/: System.hpp  SystemId.hpp  SystemRegistry.hpp  SystemScheduler.cpp  SystemScheduler.hpp  SystemTraits.hpp  TypeList.hpp
engine/core/events/: CMakeLists.txt  Event.hpp  EventBus.cpp  EventBus.hpp  EventType.hpp
engine/core/logger/: CMakeLists.txt  ILogger.hpp  LogMacros.hpp  Logger.cpp  Logger.hpp  LoggerService.cpp  LoggerService.hpp  SpdLogger.cpp  SpdLogger.hpp  logger.hpp
engine/core/memory/: CMakeLists.txt
engine/core/save/: CMakeLists.txt  SaveData.hpp  SaveManager.cpp  SaveManager.hpp
engine/core/scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  SceneEvents.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneHandle.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp
engine/core/scene/transitions/: CrossFadeTransition.cpp  CrossFadeTransition.hpp  FadeTransition.cpp  FadeTransition.hpp  SceneTransition.cpp  SceneTransition.hpp  ShaderTransition.cpp  ShaderTransition.hpp  SlideTransition.cpp  SlideTransition.hpp
engine/core/scripting/: CMakeLists.txt  ECSHostFunctions.cpp  ECSHostFunctions.hpp  HostFunctions.cpp  HostFunctions.hpp  LoadedScript.hpp  ScriptComponent.hpp  ScriptInstance.cpp  ScriptInstance.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptSystem.hpp
engine/core/systems/: CMakeLists.txt  TransformSystem.cpp  TransformSystem.hpp
engine/core/tasks/: CMakeLists.txt  JobSystem.cpp  JobSystem.hpp  TaskGraph.cpp  TaskGraph.hpp  TaskId.hpp
engine/core/tests/: CMakeLists.txt  TestEnvironment.cpp
engine/core/tests/app/: ApplicationTest.cpp  ModuleRegistryTest.cpp  SceneLoaderTest.cpp  SceneManagerTest.cpp
engine/core/tests/assets/: ArchiveTest.cpp  AssetManagerTest.cpp  AssetRegistryTest.cpp  FileSystemTest.cpp  TempDir.hpp
engine/core/tests/async/: LockFreeQueueTest.cpp  ThreadPoolTest.cpp
engine/core/tests/ecs/: TestComponents.hpp  ViewTest.cpp  WorldTest.cpp
engine/core/tests/ecs/prefab/: PrefabTest.cpp
engine/core/tests/events/: EventBusTest.cpp
engine/core/tests/scripting/: ScriptInstanceTest.cpp
engine/core/tests/tasks/: JobSystemTest.cpp  TaskGraphTest.cpp
engine/glfw_window/: CMakeLists.txt  GLFWWindowModule.cpp  GLFWWindowModule.hpp  Window.cpp  Window.hpp  WindowEvents.hpp
engine/inputs/: CMakeLists.txt  InputsHostFunctions.cpp  InputsHostFunctions.hpp  InputsManager.cpp  InputsManager.hpp  InputsModule.cpp  InputsModule.hpp
engine/physics2d/: BoxColliderComponent.hpp  CMakeLists.txt  CollisionSystem.hpp  MovementSystem.hpp  Physics2DEvents.hpp  Physics2DModule.cpp  Physics2DModule.hpp  Traits.hpp  TransformComponent.hpp  VelocityComponent.hpp
engine/renderer2d/: AtlasManager.cpp  AtlasManager.hpp  CMakeLists.txt  Camera2D.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer2DHostFunctions.cpp  Renderer2DHostFunctions.hpp  Renderer2DModule.cpp  Renderer2DModule.hpp  Renderer2DSystem.hpp  ShaderHandle.hpp  SpriteBatch.hpp  SpriteComponent.hpp  SpriteInstance.hpp  Surface.hpp  TextureHandle.hpp  common.hpp  shaders.hpp
engine/renderer2d/gl/: DepthBuffer.hpp  FrameBuffer.hpp  GLBuffer.cpp  GLBuffer.hpp  Shader.hpp  Texture2D.hpp  Texture2DArray.hpp  VertexArray.hpp
engine/renderer2d/posteffects/: PostEffect.hpp  PostEffectChain.cpp  PostEffectChain.hpp  PostEffectHandle.hpp  builtins.hpp
engine/renderer2d/tests/: AtlasManagerTest.cpp  CMakeLists.txt  PostEffectChainTest.cpp
engine/scripting/: HostFunction.hpp  HostFunctions.cpp  HostFunctions.hpp  ScriptComponent.hpp  ScriptHandle.hpp  ScriptInstance.cpp  ScriptInstance.hpp  ScriptInstanceHandle.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptSystem.hpp  ScriptingModule.cpp  ScriptingModule.hpp
(+87 files in other folders)
