file(GLOB_RECURSE ASYNC_SOURCES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB_RECURSE ASYNC_HEADERS CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_library(core_async ${ASYNC_SOURCES} ${ASYNC_HEADERS})

target_include_directories(core_async PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})