file(GLOB_RECURSE ECS_SOURCES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB_RECURSE ECS_HEADERS CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_library(core_ecs ${ECS_SOURCES} ${ECS_HEADERS})

target_include_directories(core_ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})