file(GLOB_RECURSE ECS_SOURCES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB_RECURSE ECS_HEADERS CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_library(engine_ecs STATIC ${ECS_SOURCES} ${ECS_HEADERS})
target_include_directories(engine_ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})