add_executable(test_engine_core
    TestEnvironment.cpp
    async/LockFreeQueueTest.cpp
    async/ThreadPoolTest.cpp
    tasks/TaskGraphTest.cpp
    tasks/JobSystemTest.cpp
    ecs/WorldTest.cpp
    ecs/ViewTest.cpp
    ecs/archetype/ArchetypeTest.cpp
    ecs/archetype/ArchetypeSetTest.cpp
    ecs/component/ComponentRegistryTest.cpp
    ecs/component/ComponentVtableTest.cpp
    ecs/entity/EntityBuilderTest.cpp
    ecs/entity/EntityRefTest.cpp
    ecs/prefab/PrefabTest.cpp
    ecs/system/SystemSchedulerTest.cpp
    events/EventBusTest.cpp
    assets/FileSystemTest.cpp
    assets/AssetManagerTest.cpp
    assets/AssetRegistryTest.cpp
    app/ModuleRegistryTest.cpp
    app/SceneLoaderTest.cpp
    app/SceneManagerTest.cpp
    app/ApplicationTest.cpp
)

target_link_libraries(test_engine_core
    PRIVATE
        engine_logger
        engine_async
        engine_tasks
        engine_ecs
        engine_events
        engine_assets
        engine_app
        GTest::gtest_main
)

gtest_discover_tests(test_engine_core
    PROPERTIES TIMEOUT 15
)
